--- a/source/Amiquin.Bot/Amiquin.Bot.csproj
+++ b/source/Amiquin.Bot/Amiquin.Bot.csproj
@@ -10,7 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="3.18.0" />
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
-    <PackageReference Include="Jiro.Shared" Version="1.4.4">
+    <PackageReference Include="Jiro.Shared" Version="1.4.6">
       <ExcludeAssets>contentFiles</ExcludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="10.0.1" />
@@ -36,33 +36,20 @@
     <Version>1.0.0</Version>
   </PropertyGroup>
 
- <ItemGroup>
-    <Content Include="Data\**">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  
+  <!-- Copy appsettings files to output -->
   <ItemGroup>
-      <Content Include="*.dll">
-          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Content>
+    <Content Include="appsettings.json" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="appsettings.example.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
-  <!-- Copy appsettings.example.json to appsettings.json if it doesn't exist -->
-  <Target Name="EnsureAppSettings" AfterTargets="CopyFilesToOutputDirectory">
-    <PropertyGroup>
-      <AppSettingsDestination>$(OutputPath)Data\Configuration\appsettings.json</AppSettingsDestination>
-      <AppSettingsExample>$(OutputPath)Data\Configuration\appsettings.example.json</AppSettingsExample>
-    </PropertyGroup>
-    
-    <Message Text="Checking for appsettings.json at: $(AppSettingsDestination)" Importance="normal" />
-    <Message Text="Example file path: $(AppSettingsExample)" Importance="normal" />
-    <Message Text="Example file exists: $([System.IO.File]::Exists('$(AppSettingsExample)'))" Importance="normal" />
-    <Message Text="Destination file exists: $([System.IO.File]::Exists('$(AppSettingsDestination)'))" Importance="normal" />
-    
-    <Copy SourceFiles="$(AppSettingsExample)" DestinationFiles="$(AppSettingsDestination)" Condition="!Exists('$(AppSettingsDestination)') AND Exists('$(AppSettingsExample)')" OverwriteReadOnlyFiles="true" />
-    
-    <Message Text="Copied appsettings.example.json to appsettings.json in Data/Configuration" Importance="high" Condition="!Exists('$(AppSettingsDestination)') AND Exists('$(AppSettingsExample)')" />
-  </Target>
+  <!-- Copy Data folder (Messages, etc.) to output - excludes Configuration since it's now at root -->
+  <ItemGroup>
+    <Content Include="Data\**" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
+
+  <!-- Copy native DLLs -->
+  <ItemGroup>
+    <Content Include="*.dll" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
 
 </Project>
