feat: Enhance configuration handling and Docker setup for appsettings

--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,7 @@ AMQ_LLM__Providers__OpenAI__ApiKey=sk-your-openai-api-key-here
 # AMQ_DB_NAME=amiquin_db
 # AMQ_DB_USER=amiquin_user
 # AMQ_DB_USER_PASSWORD=your-secure-user-password
+# MYSQL_VERSION=8.0
 
 # ======================
 # OPTIONAL - Memory System (Qdrant)
