--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - dev
       - prod
     container_name: amq-mysql
-    image: mysql:${MYSQL_VERSION:-latest}
+    image: mysql:${MYSQL_VERSION:-8.0}
     restart: unless-stopped
     env_file:
       - .env
