--- a/mysql/conf.d/production.cnf
+++ b/mysql/conf.d/production.cnf
@@ -1,5 +1,8 @@
 # Production MySQL Configuration for Amiquin
 # Place this file in mysql/conf.d/ directory
+#
+# Note: Memory settings are conservative to work on smaller VPS instances.
+# Adjust innodb_buffer_pool_size based on available RAM (typically 50-70% of available memory).
 
 [mysqld]
 # Basic settings
@@ -8,56 +11,45 @@ character-set-server = utf8mb4
 collation-server = utf8mb4_unicode_ci
 
 # Connection settings
-max_connections = 300
+max_connections = 100
 max_connect_errors = 1000
 wait_timeout = 600
 interactive_timeout = 600
 
-# Memory settings
-innodb_buffer_pool_size = 2G
-innodb_buffer_pool_instances = 8
-innodb_log_file_size = 512M
-innodb_log_buffer_size = 64M
-key_buffer_size = 256M
-tmp_table_size = 64M
-max_heap_table_size = 64M
+# Memory settings (conservative defaults for 2GB-4GB VPS)
+# Adjust innodb_buffer_pool_size based on available RAM
+innodb_buffer_pool_size = 256M
+innodb_buffer_pool_instances = 1
+innodb_log_buffer_size = 16M
+key_buffer_size = 32M
+tmp_table_size = 32M
+max_heap_table_size = 32M
 
 # InnoDB settings
 innodb_flush_log_at_trx_commit = 1
 innodb_file_per_table = 1
-innodb_flush_method = O_DIRECT
-innodb_io_capacity = 2000
-innodb_io_capacity_max = 4000
-innodb_read_io_threads = 8
-innodb_write_io_threads = 8
+innodb_io_capacity = 200
+innodb_io_capacity_max = 400
+innodb_read_io_threads = 4
+innodb_write_io_threads = 4
 
 # Binary logging (for replication and point-in-time recovery)
-log-bin = mysql-bin
-binlog_format = ROW
-expire_logs_days = 7
-max_binlog_size = 1G
+# Disabled by default - enable if you need replication
+# log-bin = mysql-bin
+# binlog_format = ROW
+# binlog_expire_logs_seconds = 604800
+# max_binlog_size = 256M
 
 # Slow query log
 slow_query_log = 1
 slow_query_log_file = /var/lib/mysql/slow.log
 long_query_time = 2
-log_queries_not_using_indexes = 1
-
-# Error log
-log-error = /var/lib/mysql/error.log
-
-# General log (disable in production for performance)
-# general_log = 1
-# general_log_file = /var/lib/mysql/general.log
 
 # Security settings
 skip-name-resolve
-secure_file_priv = ""
 
-# Performance schema
-performance_schema = ON
-performance_schema_max_table_instances = 12500
-performance_schema_max_table_handles = 4000
+# Performance schema (disabled for smaller instances)
+performance_schema = OFF
 
 [mysql]
 default-character-set = utf8mb4
