feat: Implement server whitelist functionality in EventHandlerService
- Added BotOptions dependency to EventHandlerService for server whitelist configuration.
- Integrated server whitelist checks in message handling and interaction handling methods.
- Updated user join handling to respect server whitelist settings.

refactor: Simplify IToggleService interface for server-specific toggles

- Removed global toggle operations from IToggleService.
- Updated method signatures to focus solely on server-specific toggle management.
- Adjusted ToggleState class to remove global toggle references.

refactor: Revise ToggleService to support server-scoped toggle operations

- Removed global toggle logic and focused on server-specific toggles.
- Updated methods to create and manage server toggles directly.
- Simplified toggle retrieval and state management processes.

test: Update integration tests for new toggle service methods

- Refactored tests to align with the removal of bulk toggle operations.
- Adjusted test cases to validate individual toggle setting functionality.

--- a/.env.example
+++ b/.env.example
@@ -98,6 +98,15 @@ AMQ_LLM__Providers__OpenAI__ApiKey=sk-your-openai-api-key-here
 # AMQ_Voice__Enabled=true
 
 # ======================
+# OPTIONAL - Server Whitelist
+# ======================
+# Restrict bot access to specific Discord servers.
+# If empty or not set, all servers have access.
+# Format: Comma-separated list of Discord server IDs
+# AMQ_Bot__ServerWhitelist__0=123456789012345678
+# AMQ_Bot__ServerWhitelist__1=234567890123456789
+
+# ======================
 # OPTIONAL - Container/Docker Settings
 # ======================
 AMQ_BOT_NAME=amiquin
