--- a/source/Amiquin.Bot/appsettings.example.json
+++ b/source/Amiquin.Bot/appsettings.example.json
@@ -10,7 +10,8 @@
     "PrintLogo": false,
     "MessageFetchCount": 40,
     "ConversationTokenLimit": 40000,
-    "HistoryOptimizationThreshold": 0.8
+    "HistoryOptimizationThreshold": 0.8,
+    "ServerWhitelist": []
   },
   "LLM": {
     "DefaultProvider": "OpenAI",
